--- a/session7.ipynb
+++ b/session7.ipynb
@@ -20,8 +20,8 @@
    "source": [
     "# 1-ABC's\n",
     "import numpy as np\n",
-    "char=np.array([\"a,b,c,d,f,g,h,i,j\"])\n",
-    "s=np.array(['a','b','c','d','f','g','h','i','j'])\n",
+    "char=np.array([\"a,b,c,d,e,f,g,h,i,j\"])\n",
+    "s=np.array(['a','b','c','d','e','f','g','h','i','j'])\n",
     "print(\"char=\",char)\n",
     "print(\"the elements in x are of type = \" ,char.dtype)\n",
     "print(\"s has dimensions = \",s.shape)\n",
