--- a/session7.ipynb
+++ b/session7.ipynb
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "char= ['a,b,c,d,f,g,h,i,j']\n",
+      "char= ['a,b,c,d,e,f,g,h,i,j']\n",
       "the elements in x are of type =  <U17\n",
-      "s has dimensions =  (9,)\n",
-      "s has size =  9\n"
+      "s has dimensions =  (10,)\n",
+      "s has size =  10\n"
      ]
     }
    ],
